# ChangeLog for dev-python/twisted-mail
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-mail/ChangeLog,v 1.11 2006/05/03 23:03:13 halcy0n Exp $

  03 May 2006; Mark Loeser <halcy0n@gentoo.org>
  twisted-mail-0.1.0-r1.ebuild:
  Stable on x86; bug #128688

  14 Apr 2006; <nixnut@gentoo.org> twisted-mail-0.2.0.ebuild:
  Added ~ppc. Bug #128688

  09 Apr 2006; Marien Zwart <marienz@gentoo.org> twisted-mail-0.2.0.ebuild:
  Fix dependency, see bug #128688. Thanks to nixnut for noticing.

  08 Apr 2006; <nixnut@gentoo.org> twisted-mail-0.1.0-r1.ebuild:
  Added ~ppc. bug #128688

  03 Apr 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  twisted-mail-0.1.0-r1.ebuild:
  Stable on sparc wrt #128688

  13 Feb 2006; Marien Zwart <marienz@gentoo.org>
  +files/twisted-mail-0.2.0-tests-2.2-compat.patch,
  twisted-mail-0.2.0.ebuild:
  Patch to make the tests succeed with twisted 2.1 and 2.2. No revision bump
  because this only affects the tests.

  02 Feb 2006; Marien Zwart <marienz@gentoo.org> Manifest:
  Fix rmd160 digests.

  31 Jan 2006; Aron Griffis <agriffis@gentoo.org> twisted-mail-0.2.0.ebuild:
  Mark 0.2.0 ~alpha/~ia64

  30 Nov 2005; Marien Zwart <marienz@gentoo.org> -twisted-mail-0.1.0.ebuild:
  Remove old ebuild.

*twisted-mail-0.2.0 (27 Nov 2005)
*twisted-mail-0.1.0-r1 (27 Nov 2005)

  27 Nov 2005; Marien Zwart <marienz@gentoo.org> metadata.xml,
  +twisted-mail-0.1.0-r1.ebuild, +twisted-mail-0.2.0.ebuild:
  Version bump (0.2.0) and revbump (0.1.0-r1) to use the new eclass (bug
  #80639). Set myself as maintainer.

  08 Apr 2005; Thomas Raschbacher <lordvan@gentoo.org> twisted-mail-0.5.0:
  initial import
  twisted-mail was part of the main twisted release
