@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-mail/twisted-mail-0.2.0.ebuild,v 1.5 2006/04/14 09:09:46 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-mail/twisted-mail-0.2.0.ebuild,v 1.6 2006/05/26 17:38:45 marienz Exp $
 
 MY_PACKAGE=Mail
 
@@ -11,6 +11,7 @@ DESCRIPTION="A Twisted Mail library, server and client."
 KEYWORDS="~alpha ~ia64 ~ppc ~sparc ~x86"
 
 DEPEND=">=dev-python/twisted-2.1
+	<dev-python/twisted-2.4
 	>=dev-python/twisted-names-0.2.0"
 
 src_unpack() {
