@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/twisted-names
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-names/ChangeLog,v 1.9 2006/05/04 05:14:19 squinky86 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-names/ChangeLog,v 1.10 2006/05/26 17:40:35 marienz Exp $
+
+  26 May 2006; Marien Zwart <marienz@gentoo.org>
+  twisted-names-0.1.0-r1.ebuild, twisted-names-0.2.0.ebuild:
+  These versions run but do not install with twisted 2.4, so add a < dep.
 
   04 May 2006; Jon Hood <squinky86@gentoo.org>
   twisted-names-0.1.0-r1.ebuild, twisted-names-0.2.0.ebuild:
