@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/twisted-mail
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-mail/ChangeLog,v 1.11 2006/05/03 23:03:13 halcy0n Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-mail/ChangeLog,v 1.12 2006/05/26 17:38:45 marienz Exp $
+
+  26 May 2006; Marien Zwart <marienz@gentoo.org>
+  twisted-mail-0.1.0-r1.ebuild, twisted-mail-0.2.0.ebuild:
+  These versions run but do not install with twisted 2.4, so add a < dep.
 
   03 May 2006; Mark Loeser <halcy0n@gentoo.org>
   twisted-mail-0.1.0-r1.ebuild:
